@@ -3,7 +3,7 @@ pkgname=baz
 pkgver=1.0
 pkgrel=1
 pkgdesc="Baz"
-arch=(i686 x86_64)
+arch=(any)
 license=('GPL')
 depends=(bar)
 
