@@ -2,7 +2,7 @@ pkgname=foo
 pkgver=2.0
 pkgrel=1
 pkgdesc="Foo Version Two!"
-arch=(i686 x86_64)
+arch=(any)
 license=('GPL')
 
 build() {
