@@ -3,7 +3,7 @@ pkgname=replacebaz
 pkgver=1.0
 pkgrel=1
 pkgdesc="Replaces Baz"
-arch=(i686 x86_64)
+arch=(any)
 license=('GPL')
 depends=(bar)
 replaces=(baz)
